Enable reflective access to java.base/java.lang for Java 17